--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,32 +3,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/yellow"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/btn_lyt1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="11sp"
-            android:text="Layout1" />
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:text="Layout1"
+            android:textSize="11sp" />
+
         <Button
             android:id="@+id/btn_lyt2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="11sp"
-            android:text="Layout2" />
+            android:layout_marginEnd="5dp"
+            android:text="Layout2"
+            android:textSize="11sp" />
+
         <Button
             android:id="@+id/btn_lyt3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="11sp"
-            android:text="Layout3" />
+            android:layout_marginEnd="5dp"
+            android:text="Layout3"
+            android:textSize="11sp" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
